--- a/templates/index.html
+++ b/templates/index.html
@@ -46,11 +46,12 @@
 
          <ul id="nav" class="nav">
             <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
+            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
             <li><a class="smoothscroll" href="#about">About</a></li>
 {#            <li><a class="smoothscroll" href="#resume">Resume</a></li>#}
-            <li><a class="smoothscroll" href="#portfolio">Works</a></li>
 {#            <li><a class="smoothscroll" href="#testimonials">Testimonials</a></li>#}
 {#            <li><a class="smoothscroll" href="#contact">Contact</a></li>#}
+             <li><a href="/resume" target="_blank">Resume</a></li>
          </ul> <!-- end #nav -->
 
       </nav> <!-- end #nav-wrap -->
@@ -77,68 +78,6 @@
 
    </header> <!-- Header End -->
 
-
-   <!-- About Section
-   ================================================== -->
-   <section id="about">
-
-      <div class="row">
-
-         <div class="columns">
-
-            <img class="profile-pic"  src='{{ url_for('static', filename='images/profile_pic.jpg') }}' alt='' />
-
-         </div>
-
-         <div class="nine columns main-col">
-
-            <h2>About Me</h2>
-
-            <p>I am a recent graduate from the University of Michigan’s Industrial and Operations Engineering Master’s
-                program. This past year, I have been working as a lead content developer on the
-                <a href="https://www.coursera.org/specializations/data-science-python" target="_blank">Applied Data Science with Python Specialization </a>
-                on <a href="https://www.coursera.org" target="_blank">Coursera.org</a>.
-                <br>
-                <br>
-                I primarily work in Python with extensive knowledge of packages such as
-                <a href="http://www.numpy.org/" target="_blank">Numpy</a>,
-                <a href="http://pandas.pydata.org/index.html" target="_blank">Pandas</a>, and
-                <a href="http://scikit-learn.org/stable/" target="_blank">Scikit-Learn</a>,
-                and also have experience with R and Matlab.
-                <br>
-                <br>
-                Outside of the realm of data science, I enjoy traveling, wilderness backpacking, running, and playing trivia.
-                <br>
-                <br>
-                If you would like to get in touch, please email me at filipj@umich.edu.
-            </p>
-
-            <div class="row">
-
-{#               <div class="columns contact-details">#}
-{##}
-{#                  <h2>Contact Details</h2>#}
-{#                  <p class="address">#}
-{#						   <span>Filip Jankovic</span><br>#}
-{#						   <span>(248) 703-5340</span><br>#}
-{#                     <span>filipj@umich.edu</span>#}
-{#					   </p>#}
-{##}
-{#               </div>#}
-
-               <div class="columns download">
-                  <p>
-                     <a href="/resume" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
-                  </p>
-               </div>
-
-            </div> <!-- end row -->
-
-         </div> <!-- end .main-col -->
-
-      </div>
-
-   </section> <!-- About Section End-->
 
 
 {#   <!-- Resume Section#}
@@ -533,6 +472,68 @@
       </div> <!-- row End -->
 
    </section> <!-- Portfolio Section End-->
+
+     <!-- About Section
+   ================================================== -->
+   <section id="about">
+
+      <div class="row">
+
+         <div class="columns">
+
+            <img class="profile-pic"  src='{{ url_for('static', filename='images/profile_pic.jpg') }}' alt='' />
+
+         </div>
+
+         <div class="nine columns main-col">
+
+            <h2>About Me</h2>
+
+            <p>I am a recent graduate from the University of Michigan’s Industrial and Operations Engineering Master’s
+                program. This past year, I have been working as a lead content developer on the
+                <a href="https://www.coursera.org/specializations/data-science-python" target="_blank">Applied Data Science with Python Specialization </a>
+                on <a href="https://www.coursera.org" target="_blank">Coursera.org</a>.
+                <br>
+                <br>
+                I primarily work in Python with extensive knowledge of packages such as
+                <a href="http://www.numpy.org/" target="_blank">Numpy</a>,
+                <a href="http://pandas.pydata.org/index.html" target="_blank">Pandas</a>, and
+                <a href="http://scikit-learn.org/stable/" target="_blank">Scikit-Learn</a>,
+                and also have experience with R and Matlab.
+                <br>
+                <br>
+                Outside of the realm of data science, I enjoy traveling, wilderness backpacking, running, and playing trivia.
+                <br>
+                <br>
+                If you would like to get in touch, please email me at filipj@umich.edu.
+            </p>
+
+            <div class="row">
+
+{#               <div class="columns contact-details">#}
+{##}
+{#                  <h2>Contact Details</h2>#}
+{#                  <p class="address">#}
+{#						   <span>Filip Jankovic</span><br>#}
+{#						   <span>(248) 703-5340</span><br>#}
+{#                     <span>filipj@umich.edu</span>#}
+{#					   </p>#}
+{##}
+{#               </div>#}
+
+               <div class="columns download">
+                  <p>
+                     <a href="/resume" class="button" target="_blank"><i class="fa fa-download"></i>Download Resume</a>
+                  </p>
+               </div>
+
+            </div> <!-- end row -->
+
+         </div> <!-- end .main-col -->
+
+      </div>
+
+   </section> <!-- About Section End-->
 
 
    <!-- Call-To-Action Section
