added description to classifier viz html

--- a/templates/mushroomclassifier.html
+++ b/templates/mushroomclassifier.html
@@ -100,6 +100,7 @@
       <p>To compute a new split of the data, click the 'New Train/Test Split' button.</p>
       <p>To change the model used, select one from the dropdown menu.</p>
       <p>To switch between the probability and the decision boundary, use the 'Select Boundary' dropdown menu.</p>
+      <p>Hover over points to see the true label and the classifier prediction.</p>
       <br>
     <div class="container bk-root" >
       {{ bokeh_script|safe }}
